--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.18.0",
     "react-select": "^5.7.7",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "modern-normalize": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
